; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/hal/extr_hprw.c_zfDbgOpenEeprom.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/hal/extr_hprw.c_zfDbgOpenEeprom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zfDbgOpenEeprom(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @zfDelayWriteInternalReg(i32* %3, i32 1905664, i32 305419896)
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @zfDelayWriteInternalReg(i32* %5, i32 1905668, i32 1437204735)
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @zfDelayWriteInternalReg(i32* %7, i32 1905672, i32 324508366)
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @zfDelayWriteInternalReg(i32* %9, i32 1905684, i32 0)
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @zfFlushDelayWrite(i32* %11)
  ret void
}

declare dso_local i32 @zfDelayWriteInternalReg(i32*, i32, i32) #1

declare dso_local i32 @zfFlushDelayWrite(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
